<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <cn.com.cys.xartboard.XArtBoard
        android:id="@+id/xartboard"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </cn.com.cys.xartboard.XArtBoard>

    <Button
        android:id="@+id/rect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:onClick="onClick"
        android:text="@string/rect"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

    </Button>

    <Button
        android:id="@+id/square"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:onClick="onClick"
        android:text="@string/square"
        app:layout_constraintLeft_toRightOf="@id/rect"
        app:layout_constraintTop_toTopOf="parent">

    </Button>

    <Button
        android:id="@+id/oval"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:onClick="onClick"
        android:text="@string/oval"
        app:layout_constraintLeft_toRightOf="@id/square"
        app:layout_constraintTop_toTopOf="parent">

    </Button>

    <Button
        android:id="@+id/circle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:onClick="onClick"
        android:text="@string/circle"
        app:layout_constraintLeft_toRightOf="@id/oval"
        app:layout_constraintTop_toTopOf="parent">

    </Button>

    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:onClick="onClick"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

    </Button>

    <Button
        android:id="@+id/pen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:onClick="onClick"
        android:text="@string/pen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@id/eraser">

    </Button>

    <Button
        android:id="@+id/eraser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:onClick="onClick"
        android:text="@string/eraser"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@id/color">

    </Button>


    <Button
        android:id="@+id/color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:onClick="onClick"
        android:text="@string/color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@id/retrieve">

    </Button>

    <Button
        android:id="@+id/retrieve"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:onClick="onClick"
        android:text="@string/retrieve"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@id/retract">

    </Button>

    <Button
        android:id="@+id/retract"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:onClick="onClick"
        android:text="@string/retract"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@id/reset">

    </Button>

    <Button
        android:id="@+id/reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:onClick="onClick"
        android:text="@string/reset"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent">

    </Button>

    <FrameLayout
        android:id="@+id/fl_control"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#AAA3A3"
        android:padding="20dp"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible">

        <SeekBar
            android:id="@+id/seekbar_eraser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="100dp">

        </SeekBar>

        <Button
            android:id="@+id/close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:onClick="onClick"
            android:text="@string/close">

        </Button>

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>